--- a/package.json
+++ b/package.json
@@ -17,8 +17,19 @@
   },
   "homepage": "https://github.com/IamAppDev/pfe-cod-api#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "config": "^3.3.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^3.21.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "nodemailer": "^6.4.5",
+    "sequelize": "^5.21.5",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "debug": "^4.1.1",
+    "morgan": "^1.9.1"
   }
 }
