--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-routes-visualizer": "^0.2.4",
     "helmet": "^3.21.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
