--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.5",
+    "randexp": "^0.5.3",
     "sequelize": "^5.21.5",
     "winston": "^3.2.1"
   },
