--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.5",
     "randexp": "^0.5.3",
+    "react-chartjs-2": "^2.9.0",
     "sequelize": "^5.21.5",
     "uuid": "^8.0.0",
     "winston": "^3.2.1"
